--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* GENERAL */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 * {
     margin: 0;
@@ -6,5 +7,64 @@
 }
 
 body {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:'IBM Plex Mono',sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+p {
+    color: rgb(85, 85, 85)
+}
+
+/* TRANSITION */
+a,
+.btn {
+    transition: all 500ms ease;
+}
+
+/* NAV BAR */
+nav, .nav-links {
+    display: flex;
+}
+
+nav {
+    justify-content: space-between;
+    align-items: center;
+    height: 9vh;
+    background-color: black;
+    padding: 0 20px;
+    font-size: small;
+}
+
+.nav-links {
+    gap: 2rem;
+    list-style: none;
+    font-size: 1rem;
+}
+
+a {
+    color: white;
+    text-decoration:double;
+    text-decoration-color: white;
+}
+
+a:hover {
+    color: green;
+    transition: all 2ms ease;
+}
+
+.logo {
+    font-size: 1rem; 
+    color: white
+}
+
+.logo:hover {
+    cursor: grab;
+    color: green;
+}
+
+.about {
+    padding: 0 20px;
 }
