--- a/style.css
+++ b/style.css
@@ -28,16 +28,6 @@ h5 {
     color: rgb(222, 222, 222);
 }
 
-h1:hover,
-h2:hover,
-h3:hover,
-h4:hover,
-h5:hover,
-p:hover {
-    color: rgb(104, 237, 113);
-    transition: all 200ms ease;
-}
-
 /* transition */
 a,
 .btn {
@@ -60,6 +50,7 @@ a,
 
 .sidebar:hover {
     background-color: rgb(3, 3, 3);
+    transition: 600ms;
 }
 
 .sidebar-links {
@@ -87,8 +78,12 @@ a:hover {
 .container {
     padding: 1.5rem;
     margin-left: 170px;
-    height: 100vh;
-    border: 2px solid rgb(222, 222, 222);
+    height: auto;
+    overflow: hidden;
+}
+
+.container p {
+    font-size: 0.85rem;
 }
 
 .home {
@@ -100,6 +95,30 @@ a:hover {
 
 .about {
     justify-content: baseline;
+}
+
+.languages {
+    padding: 1.5rem 0rem;
+}
+
+.languages-list {
+    color: white;
+    list-style: none;
+    padding: 1rem 0rem;
+    font-size: 2rem;
+    display: flex;
+    align-items: baseline;
+}
+
+.contacts {
+    height: auto;
+    bottom: 0;
+    position: absolute;
+    padding: 0rem 0rem 1.5rem;
+}
+
+.contacts-list {
+    list-style: none;
 }
 
 header {
@@ -117,7 +136,7 @@ header p {
 }
 
 .project-card {
-    width: 120rem;
+    width: auto;
     height: auto;
     overflow: hidden;
     text-align: center;
